force-app/main/default/src/objects/Case/fields/MVN_HIPAA_Consent_Status__c.field-meta.xml
<CustomField>
    <fullName>MVN_HIPAA_Consent_Status__c</fullName>
    <description>Returns the status of the record listed in the HIPAA Consent lookup field. Used for RBM User visibility.</description>
    <formula>TEXT(MVN_HIPAA_Consent__r.PJN_Privacy_Consent_Status__c)</formula>
    <label>HIPAA Consent Status</label>
    <type>Text</type>
</CustomField>