force-app/main/default/src/objects/Case/fields/MVN_Home_Health_Agency__c.field-meta.xml
<CustomField>
    <fullName>MVN_Home_Health_Agency__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Home Health Agency</label>
    <length>100</length>
    <type>Text</type>
</CustomField>