force-app/main/default/src/objects/Case/fields/MVN_Home_Health_Agency_Phone__c.field-meta.xml
<CustomField>
    <fullName>MVN_Home_Health_Agency_Phone__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Home Health Agency Phone</label>
    <type>Phone</type>
</CustomField>