force-app/main/default/src/objects/Case/fields/MVN_Insured__c.field-meta.xml
<CustomField>
    <fullName>MVN_Insured__c</fullName>
    <description>Specifies if a patient has third-party or private insurance.</description>
    <inlineHelpText>Does the patient have insurance (third-party or private insurance)?</inlineHelpText>
    <label>Insured</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>