force-app/main/default/src/objects/Case/fields/MVN_Is_Past__c.field-meta.xml
<CustomField>
    <fullName>MVN_Is_Past__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to stamp value from related Scheduled Evkeeza Appointment.</description>
    <label>Is_Past</label>
    <type>Checkbox</type>
</CustomField>