force-app/main/default/src/objects/Case/fields/MVN_Is_Upcoming__c.field-meta.xml
<CustomField>
    <fullName>MVN_Is_Upcoming__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to stamp value from related Scheduled Appointment record for Evkeeza.</description>
    <label>Is_Upcoming</label>
    <type>Checkbox</type>
</CustomField>