force-app/main/default/src/objects/Case/fields/MVN_Last_Copay_Medical_Claim__c.field-meta.xml
<CustomField>
    <fullName>MVN_Last_Copay_Medical_Claim__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Most recently created or updated Medical Copay Claim for the Care Plan.</description>
    <label>Last Copay Medical Claim</label>
    <referenceTo>MVN_Claim__c</referenceTo>
    <relationshipLabel>Cases (Last Medical Copay Claim)</relationshipLabel>
    <relationshipName>Cases_Medical_Copay_Claim</relationshipName>
    <type>Lookup</type>
</CustomField>