force-app/main/default/src/objects/Case/fields/MVN_Last_Pharmacy_Status_Update__c.field-meta.xml
<CustomField>
    <fullName>MVN_Last_Pharmacy_Status_Update__c</fullName>
    <description>The last time the Pharmacy Status was updated on the Case.  This value is set via automation.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Last Pharmacy Status Update</label>
    <type>DateTime</type>
</CustomField>