force-app/main/default/src/objects/Case/fields/MVN_Last_SD_SP_Therapy_Status_Update__c.field-meta.xml
<CustomField>
    <fullName>MVN_Last_SD_SP_Therapy_Status_Update__c</fullName>
    <description>Last Therapy Status Update with a Sub Status of SP or SD order Confirmed
Created by Mavens CLM 04132022</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Last SD/SP Therapy Status Update</label>
    <type>DateTime</type>
</CustomField>