force-app/main/default/src/objects/Case/fields/MVN_Last_Therapy_Status_Update__c.field-meta.xml
<CustomField>
    <fullName>MVN_Last_Therapy_Status_Update__c</fullName>
    <description>The last time the Therapy Status or Therapy Sub-Status was updated on the Case.  This value is set via automation.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Last Therapy Status Update</label>
    <type>DateTime</type>
</CustomField>