force-app/main/default/src/objects/Case/fields/MVN_Missing_Information_Activity__c.field-meta.xml
<CustomField>
    <fullName>MVN_Missing_Information_Activity__c</fullName>
    <label>Missing Information</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Authorization to Disclose/Use Health Information</fullName>
            </value>
            <value>
                <fullName>Complete Prescription</fullName>
            </value>
            <value>
                <fullName>Diagnosis Code</fullName>
            </value>
            <value>
                <fullName>Patient Address</fullName>
            </value>
            <value>
                <fullName>Patient BIN</fullName>
            </value>
            <value>
                <fullName>Patient Certifications</fullName>
            </value>
            <value>
                <fullName>Patient Date of Birth</fullName>
            </value>
            <value>
                <fullName>Patient Gender</fullName>
            </value>
            <value>
                <fullName>Patient Group Number</fullName>
            </value>
            <value>
                <fullName>Patient Household Size</fullName>
            </value>
            <value>
                <fullName>Patient Income</fullName>
            </value>
            <value>
                <fullName>Patient Member ID</fullName>
            </value>
            <value>
                <fullName>Patient Name</fullName>
            </value>
            <value>
                <fullName>Patient Phone</fullName>
            </value>
            <value>
                <fullName>Patient Weight</fullName>
            </value>
            <value>
                <fullName>Physician Address</fullName>
            </value>
            <value>
                <fullName>Physician Fax</fullName>
            </value>
            <value>
                <fullName>Physician Name</fullName>
            </value>
            <value>
                <fullName>Physician NPI</fullName>
            </value>
            <value>
                <fullName>Physician Phone</fullName>
            </value>
            <value>
                <fullName>Physician Signature</fullName>
            </value>
            <value>
                <fullName>Physician Signature Date</fullName>
            </value>
            <value>
                <fullName>Start Form</fullName>
            </value>
            <value>
                <fullName>Trial Site Name</fullName>
            </value>
            <value>
                <fullName>Trial Site Study ID</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>