force-app/main/default/src/objects/Case/fields/MVN_Nurse_Name__c.field-meta.xml
<CustomField>
    <fullName>MVN_Nurse_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Nurse Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>