force-app/main/default/src/objects/Case/fields/MVN_Nurse_Phone__c.field-meta.xml
<CustomField>
    <fullName>MVN_Nurse_Phone__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Nurse Phone</label>
    <type>Phone</type>
</CustomField>