force-app/main/default/src/objects/Case/fields/MVN_Organization__c.field-meta.xml
<CustomField>
    <fullName>MVN_Organization__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Organization</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>PJN_Organization</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Cases (Organization)</relationshipLabel>
    <relationshipName>Organization_Cases</relationshipName>
    <type>Lookup</type>
</CustomField>