force-app/main/default/src/objects/Case/fields/MVN_Organization_Address__c.field-meta.xml
<CustomField>
    <fullName>MVN_Organization_Address__c</fullName>
    <description>Used to pull in a case organization&apos;s city, state and zip for the RBM/MS Sales email templates.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Organization Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>