force-app/main/default/src/objects/Case/fields/MVN_Other_ICD_10_CM_Diagnosis_Code__c.field-meta.xml
<CustomField>
    <fullName>MVN_Other_ICD_10_CM_Diagnosis_Code__c</fullName>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>Other ICD-10-CM Diagnosis Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>