force-app/main/default/src/objects/Case/fields/MVN_Owner_Amazon_Connect_Username__c.field-meta.xml
<CustomField>
    <fullName>MVN_Owner_Amazon_Connect_Username__c</fullName>
    <description>Return Case Owner as a username formatted to match against agents in Amazon Connect. -- Mavens, 2 Aug 2021</description>
    <formula>Owner:User.Id &amp; &quot;@&quot; &amp; $Organization.Id</formula>
    <label>Owner Amazon Connect Username</label>
    <type>Text</type>
</CustomField>