force-app/main/default/src/objects/Case/fields/MVN_PAP_Consent__c.field-meta.xml
<CustomField>
    <fullName>MVN_PAP_Consent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PAP Consent</label>
    <referenceTo>PJN_Contact_Point_Type_Consent__c</referenceTo>
    <relationshipLabel>Cases (PAP Consent)</relationshipLabel>
    <relationshipName>PAP_Consent_Cases</relationshipName>
    <type>Lookup</type>
</CustomField>