force-app/main/default/src/objects/Case/fields/MVN_Parent_Care_Plan_Orginization__c.field-meta.xml
<CustomField>
    <fullName>MVN_Parent_Care_Plan_Orginization__c</fullName>
    <formula>if( ISBLANK( ParentId ) , &quot;&quot; ,
   Parent.MVN_Organization__c  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parent Care Plan Orginization</label>
    <type>Text</type>
</CustomField>