force-app/main/default/src/objects/Case/fields/MVN_Patient_Birthdate__c.field-meta.xml
<CustomField>
    <fullName>MVN_Patient_Birthdate__c</fullName>
    <formula>Account.MVN_Birthdate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Patient Birthdate</label>
    <type>Date</type>
</CustomField>