force-app/main/default/src/objects/Case/fields/MVN_Patient_First_Name__c.field-meta.xml
<CustomField>
    <fullName>MVN_Patient_First_Name__c</fullName>
    <formula>Account.FirstName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Patient First Name</label>
    <type>Text</type>
</CustomField>