force-app/main/default/src/objects/Case/fields/MVN_Patient_Gender__c.field-meta.xml
<CustomField>
    <fullName>MVN_Patient_Gender__c</fullName>
    <formula>TEXT(Account.HealthCloudGA__Gender__pc)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Patient Gender</label>
    <type>Text</type>
</CustomField>