force-app/main/default/src/objects/Case/fields/MVN_Patient_Id__c.field-meta.xml
<CustomField>
    <fullName>MVN_Patient_Id__c</fullName>
    <formula>Account.MVN_Patient_Id__c</formula>
    <label>Patient Id</label>
    <type>Text</type>
</CustomField>