force-app/main/default/src/objects/Case/fields/MVN_Patient_Initials__c.field-meta.xml
<CustomField>
    <fullName>MVN_Patient_Initials__c</fullName>
    <description>Returns the Patient Initials from the Patient Name</description>
    <formula>Account.MVN_Patient_Initials__c</formula>
    <label>Patient Initials</label>
    <type>Text</type>
</CustomField>