force-app/main/default/src/objects/Case/fields/MVN_Patient_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>MVN_Patient_Last_Name__c</fullName>
    <formula>Account.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Patient Last Name</label>
    <type>Text</type>
</CustomField>