force-app/main/default/src/objects/Case/fields/MVN_Patient_Outreach_Attempts__c.field-meta.xml
<CustomField>
    <fullName>MVN_Patient_Outreach_Attempts__c</fullName>
    <description>Counts the number of unsuccessful voice calls related to this case where the Topic = Patient General Support or Patient Shipment Confirmation. Set by flow.</description>
    <label>Patient Outreach Attempts</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>