force-app/main/default/src/objects/Case/fields/MVN_Patient_Primary_Address__c.field-meta.xml
<CustomField>
    <fullName>MVN_Patient_Primary_Address__c</fullName>
    <formula>Account.PJN_Primary_Address_Formula__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Patient Primary Address</label>
    <type>Text</type>
</CustomField>