force-app/main/default/src/objects/Case/fields/MVN_Patient_Primary_Phone_E164__c.field-meta.xml
<CustomField>
    <fullName>MVN_Patient_Primary_Phone_E164__c</fullName>
    <description>Stores the patient primary phone number formatted using the E.164 international standard. For use with Service Cloud Voice, value is set via automation. -- Mavens, 3 Aug 2021</description>
    <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
    <label>Patient Primary Phone E.164</label>
    <length>50</length>
    <type>Text</type>
</CustomField>