force-app/main/default/src/objects/Case/fields/MVN_Pharmacy_Status__c.field-meta.xml
<CustomField>
    <fullName>MVN_Pharmacy_Status__c</fullName>
    <defaultValue>&quot;Unknown&quot;</defaultValue>
    <encryptionScheme>None</encryptionScheme>
    <label>Pharmacy Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>