force-app/main/default/src/objects/Case/fields/MVN_Physician_FirstName__c.field-meta.xml
<CustomField>
    <fullName>MVN_Physician_FirstName__c</fullName>
    <formula>if( ISBLANK( ParentId ) ,  PJN_Physician__r.FirstName ,  Parent.PJN_Physician__r.FirstName )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Physician FirstName</label>
    <type>Text</type>
</CustomField>