force-app/main/default/src/objects/Case/fields/MVN_Physician_LastName__c.field-meta.xml
<CustomField>
    <fullName>MVN_Physician_LastName__c</fullName>
    <formula>if( ISBLANK( ParentId ) ,  PJN_Physician__r.LastName ,  Parent.PJN_Physician__r.LastName )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Physician LastName</label>
    <type>Text</type>
</CustomField>