force-app/main/default/src/objects/Case/fields/MVN_Preferred_Acquisition_Channel__c.field-meta.xml
<CustomField>
    <fullName>MVN_Preferred_Acquisition_Channel__c</fullName>
    <description>Specified the acquisition channel preference for a patient&apos;s treatment.</description>
    <label>Preferred Acquisition Channel</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>MVN_Preferred_Treatment_Setting__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Specialty Pharmacy</fullName>
            </value>
            <value>
                <fullName>Buy and Bill</fullName>
            </value>
            <value>
                <fullName>Undecided</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>