force-app/main/default/src/objects/Case/fields/MVN_Preferred_Clinical_Setting__c.field-meta.xml
<CustomField>
    <fullName>MVN_Preferred_Clinical_Setting__c</fullName>
    <description>Specifies the clinical setting preference for a patient&apos;s treatment.</description>
    <label>Preferred Clinical Setting</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>MVN_Preferred_Treatment_Setting__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In-Office</fullName>
            </value>
            <value>
                <fullName>Infusion Center</fullName>
            </value>
            <value>
                <fullName>Undecided</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>