force-app/main/default/src/objects/Case/fields/MVN_Preferred_Treatment_Setting__c.field-meta.xml
<CustomField>
    <fullName>MVN_Preferred_Treatment_Setting__c</fullName>
    <description>Specifies the preferred treatment setting for a patient.</description>
    <label>Preferred Treatment Setting</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Home</fullName>
            </value>
            <value>
                <fullName>Clinical Setting</fullName>
            </value>
            <value>
                <fullName>Undecided</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>