force-app/main/default/src/objects/Case/fields/MVN_Primary_Physician_Prescription_Sig__c.field-meta.xml
<CustomField>
    <fullName>MVN_Primary_Physician_Prescription_Sig__c</fullName>
    <description>Returns the Physician Signature picklist value from the Primary Prescription lookup. Used for RBM User visibility.</description>
    <formula>TEXT(PJN_Primary_Prescription__r.PJN_Physician_Signature__c)</formula>
    <label>Primary Physician Prescription Signature</label>
    <type>Text</type>
</CustomField>