force-app/main/default/src/objects/Case/fields/MVN_Program_Consent__c.field-meta.xml
<CustomField>
    <fullName>MVN_Program_Consent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Program Consent</label>
    <referenceTo>PJN_Contact_Point_Type_Consent__c</referenceTo>
    <relationshipLabel>Cases (Program Consent)</relationshipLabel>
    <relationshipName>Program_Consent_Cases</relationshipName>
    <type>Lookup</type>
</CustomField>