force-app/main/default/src/objects/Case/fields/MVN_RBM_Criteria_Check__c.field-meta.xml
<CustomField>
    <fullName>MVN_RBM_Criteria_Check__c</fullName>
    <defaultValue>false</defaultValue>
    <description>populated via flow and linked to RBM care plan visibility via case sharing rule</description>
    <label>RBM Criteria Check</label>
    <type>Checkbox</type>
</CustomField>