force-app/main/default/src/objects/Case/fields/MVN_RBM_User__c.field-meta.xml
<CustomField>
    <fullName>MVN_RBM_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>RBM User assigned to this Care Plan.</description>
    <label>RBM</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cases1</relationshipName>
    <type>Lookup</type>
</CustomField>