force-app/main/default/src/objects/Case/fields/MVN_Referral_Processed_Date__c.field-meta.xml
<CustomField>
    <fullName>MVN_Referral_Processed_Date__c</fullName>
    <description>Date value of Created Date</description>
    <formula>DATEVALUE(CreatedDate)</formula>
    <label>Referral Processed Date</label>
    <type>Date</type>
</CustomField>