force-app/main/default/src/objects/Case/fields/MVN_Sales_Email__c.field-meta.xml
<CustomField>
    <fullName>MVN_Sales_Email__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>MS Sales Email</label>
    <type>Email</type>
</CustomField>