force-app/main/default/src/objects/Case/fields/MVN_Sales_Name__c.field-meta.xml
<CustomField>
    <fullName>MVN_Sales_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>MS Sales Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>