force-app/main/default/src/objects/Case/fields/MVN_Share_with_RBM__c.field-meta.xml
<CustomField>
    <fullName>MVN_Share_with_RBM__c</fullName>
    <defaultValue>false</defaultValue>
    <description>True if RBMs should have Read-Only access to the Case.  The field is set via automation and referenced in Case sharing rules.</description>
    <label>Share with RBM</label>
    <type>Checkbox</type>
</CustomField>