force-app/main/default/src/objects/Case/fields/MVN_Share_with_RBM_Test__c.field-meta.xml
<CustomField>
    <fullName>MVN_Share_with_RBM_Test__c</fullName>
    <formula>AND(
AND(
ISPICKVAL(MVN_ICD_10_CM_Diagnosis_Code__c, &quot;E78.01&quot;),
Account.MVN_Age__c &gt;= 12)
,
OR(
ISPICKVAL(PJN_Therapy_Status__c, &quot;Active&quot;),
ISPICKVAL(PJN_Therapy_Status__c, &quot;Pending&quot;),
BEGINS(UPPER(MVN_Pharmacy_Status__c),&quot;ACTIVE&quot;),
BEGINS(UPPER(MVN_Pharmacy_Status__c),&quot;PENDING&quot;),
MVN_Share_with_RBM__c = TRUE
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Share with RBM Test</label>
    <type>Checkbox</type>
</CustomField>