force-app/main/default/src/objects/Case/fields/MVN_SMS_Consent__c.field-meta.xml
<CustomField>
    <fullName>MVN_SMS_Consent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the SMS Consent record for the patient</description>
    <label>SMS Consent</label>
    <referenceTo>PJN_Contact_Point_Type_Consent__c</referenceTo>
    <relationshipLabel>Cases (SMS Consent)</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>