force-app/main/default/src/objects/Case/fields/MVN_SP_Patient_Id__c.field-meta.xml
<CustomField>
    <fullName>MVN_SP_Patient_Id__c</fullName>
    <description>Dispensing pharmacy unique identifier for the patient.</description>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>SP Patient Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>