force-app/main/default/src/objects/Case/fields/MVN_Start_Form_Received_Date__c.field-meta.xml
<CustomField>
    <fullName>MVN_Start_Form_Received_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Start Form Received Date</label>
    <type>Date</type>
</CustomField>