force-app/main/default/src/objects/Case/fields/MVN_Start_Form_Version__c.field-meta.xml
<CustomField>
    <fullName>MVN_Start_Form_Version__c</fullName>
    <label>Start Form Version</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Version 1</fullName>
            </value>
            <value>
                <fullName>Version 2</fullName>
            </value>
            <value>
                <fullName>Version 3</fullName>
            </value>
            <value>
                <fullName>Version 4</fullName>
            </value>
            <value>
                <fullName>Version 5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>