force-app/main/default/src/objects/Case/fields/MVN_Total_Appointments__c.field-meta.xml
<CustomField>
    <fullName>MVN_Total_Appointments__c</fullName>
    <description>Total number of appointments related to the Care Plan regardless of Status</description>
    <label>Total Appointments</label>
    <summaryForeignKey>Appointment_MVN__c.Care_Plan_MVN__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>