force-app/main/default/src/objects/Case/fields/MVN_Total_Completed_Appointments__c.field-meta.xml
<CustomField>
    <fullName>MVN_Total_Completed_Appointments__c</fullName>
    <label>Total Number Completed Appointments</label>
    <summaryFilterItems>
        <field>Appointment_MVN__c.MVN_Status__c</field>
        <operation>equals</operation>
        <value>Completed</value>
    </summaryFilterItems>
    <summaryForeignKey>Appointment_MVN__c.Care_Plan_MVN__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>