force-app/main/default/src/objects/Case/fields/MVN_Total_Days_since_Enrollment__c.field-meta.xml
<CustomField>
    <fullName>MVN_Total_Days_since_Enrollment__c</fullName>
    <formula>TODAY()- MVN_Start_Form_Received_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Days since Enrollment</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>