force-app/main/default/src/objects/Case/fields/MVN_Treatment_Site__c.field-meta.xml
<CustomField>
    <fullName>MVN_Treatment_Site__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Treatment Site</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 OR 2</booleanFilter>
        <filterItems>
            <field>Account.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>MVN_Treatment_Site</value>
        </filterItems>
        <filterItems>
            <field>Account.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>PJN_Organization</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Cases (Treatment Site)</relationshipLabel>
    <relationshipName>Treatment_Site_Cases</relationshipName>
    <type>Lookup</type>
</CustomField>