force-app/main/default/src/objects/Case/fields/MVN_Treatment_Start_Date_Known__c.field-meta.xml
<CustomField>
    <fullName>MVN_Treatment_Start_Date_Known__c</fullName>
    <description>For IHA reporting
Created by Mavens 9-19-2022</description>
    <label>Treatment Start Date Known?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Unsure</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>