force-app/main/default/src/objects/Case/fields/MVN_Voicemail_Link__c.field-meta.xml
<CustomField>
    <fullName>MVN_Voicemail_Link__c</fullName>
    <description>Link to the voicemail left by the customer. Set by CTI.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Voicemail Link</label>
    <length>4000</length>
    <type>Html</type>
</CustomField>