force-app/main/default/src/objects/Case/fields/MVN_Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>MVN_Zip_Code__c</fullName>
    <formula>Account_Primary_Zip_MVN__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Zip Code</label>
    <type>Text</type>
</CustomField>