force-app/main/default/src/objects/Case/fields/Other_Topics_Discussed_MVN__c.field-meta.xml
<CustomField>
    <fullName>Other_Topics_Discussed_MVN__c</fullName>
    <description>Any other unlisted topics discussed during the interaction.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Other Topics Discussed</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>