force-app/main/default/src/objects/Case/fields/PJN_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>PJN_Account_Name__c</fullName>
    <formula>Account.FirstName &amp; &apos; &apos; &amp; Account.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Name</label>
    <type>Text</type>
</CustomField>