force-app/main/default/src/objects/Case/fields/PJN_Actions__c.field-meta.xml
<CustomField>
    <fullName>PJN_Actions__c</fullName>
    <description>Text field to label the quick actions highlight panel for a patient&apos;s care plan.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Actions</label>
    <length>10</length>
    <type>Text</type>
</CustomField>