force-app/main/default/src/objects/Case/fields/PJN_Active_Coverage_Investigation__c.field-meta.xml
<CustomField>
    <fullName>PJN_Active_Coverage_Investigation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The investigation representing the Patient&apos;s current coverage</description>
    <inlineHelpText>The investigation representing the Patient&apos;s current coverage</inlineHelpText>
    <label>Active Coverage Investigation</label>
    <referenceTo>PJN_Coverage_Investigation__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>PJN_Care_Plans</relationshipName>
    <type>Lookup</type>
</CustomField>