force-app/main/default/src/objects/Case/fields/PJN_Active_Prescription__c.field-meta.xml
<CustomField>
    <fullName>PJN_Active_Prescription__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to a patient&apos;s prescription.</description>
    <label>Active Prescription</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>HealthCloudGA__EhrMedicationPrescription__c.HealthCloudGA__Account__r.Id</field>
            <operation>equals</operation>
            <valueField>$Source.AccountId</valueField>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>HealthCloudGA__EhrMedicationPrescription__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>CasesPrescription</relationshipName>
    <type>Lookup</type>
</CustomField>